--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,6 @@
             ],
             "styles": [
               "src/styles.css"
-              
             ],
             "scripts": []
           },
@@ -86,9 +85,13 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+             "node_modules/bootstrap/dist/css/bootstrap.min.css",
+  "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+  "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           }
         }
       }
