--- a/angular.json
+++ b/angular.json
@@ -39,11 +39,12 @@
                   "maximumWarning": "500kB",
                   "maximumError": "1MB"
                 },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
-                }
+               {
+  "type": "anyComponentStyle",
+  "maximumWarning": "100kb",
+  "maximumError": "120kb"
+}
+
               ],
               "outputHashing": "all"
             },
